--- a/local.css
+++ b/local.css
@@ -1,1 +1,46 @@
+body{
+  background: url('background5.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.form-control:hover{
+  box-shadow: 0px 0px 2px blue;
+}
+h1,h3{
+  color:rgb(80, 80, 200);
+  text-shadow: 1px 1px 1px black;
+  text-align: center;
+}
+#classInfo{
+  background-color: rgba(149, 194, 244,.7);
+  box-shadow: 2px 2px 1px gray;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 4px;
 
+}
+#addClassButton{
+
+  background-color: rgba(51,122,183,.8);
+  box-shadow: 2px 2px 2px rgba(0,0,0,.7);
+  font-weight: bold;
+}
+#addClassButton:hover{
+
+  box-shadow: 3px 3px 3px rgba(0,0,0,.7);
+}
+#displayGpa{
+  padding-top: 10px;
+  font-size: 60px;
+  color:rgb(50,50,200);
+  text-align: center;
+  text-shadow: -1px 0 2 black, 0 1px black, 1px 0 black, 0 -1px 2px black;
+}
+#displayGPA{
+  width:20%;
+  margin:0 auto;
+  background-color: rgba(255,255,255,.9);
+  border-radius: 20px;
+  box-shadow: 2px 2px 2px black;
+}
